# sbsearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _build_s2  build_s2.sh  build_venv.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/scripts/: build_s2.sh
.github/workflows/: build-s2geometry.yml  ci-tests.yml  ci_tests.yaml  s2geometry-venv.yml
licenses/: README.md  SOFA_LICENSE.rst
sbsearch/: __init__.py  config.py  core.py  db.py  ephem.py  ephemeris.py  exceptions.py  interior.pyx  libspatial.cpp  logging.py  model.py  sbsdb.py  sbsearch.py  schema.py  setup_package.py  spatial.pxd  spatial.pyx  target.py  util.py
sbsearch/model/: __init__.py  core.py  example_survey.py
sbsearch/test/: __init__.py  skytiles.py  test_config.py  test_core.py  test_db.py  test_ephem.py  test_ephemeris.py  test_interior.py  test_logging.py  test_model.py  test_sbsdb.py  test_sbsearch.py  test_spatial.py  test_target.py  test_util.py
sbsearch/visualization/: __init__.py  fixed.py
src/: build_test_db.cc  build_test_db.h  config.h.in  configure_sbsearch.cc  date.cc  date.h  date_test.cc  diagnostics.cc  ephemeris.cc  ephemeris.h  ephemeris_test.cc  exceptions.h  files.cc  files.h  files_test.cc  fixed_width_table.h  found.cc  found.h  found_test.cc  horizons.cc  horizons.h  horizons_test.cc  indexer.cc  indexer.h  indexer_test.cc  logging.cc  logging.h  logging_save.cc  logging_save.h  logging_test.cc  moving_target.cc  moving_target.h  moving_target_test.cc  observation.cc  observation.h  observation_test.cc  observatory.h  observatory_test.cc  query_test_db.cc  reindex_test_db.cc  (+30 more)
test-extras/: big-query.py  zchecker2sbs.py
