[metadata]
name = sbsearch
package_name = sbsearch
author = Michael S. P. Kelley
author_email = msk@astro.umd.edu
license = BSD 3-Clause
license_file = LICENSE
url = https://github.com/Small-Bodies-Node/sbsearch
description = Toolkit to find small Solar System bodies in astronomical surveys.
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = False
github_project = Small-Bodies-Node/sbsearch
keywords = astronomy, astrophysics, planetary, asteroid, comet, space, science

[options]
packages = find:
zip_save = False
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    numpy>=1.17.0
    astropy>=4.0
    astroquery>=0.4.4.dev7007
    sbpy>0.2.2
    sqlalchemy>=1.3<1.4
    cython>=0.29.22<0.30
    extension-helpers
include_package_data = False

[options.extras_require]
test =
    pytest>=4.6
    pytest-astropy
    pytest-xdist
    coverage
    testing.postgresql

[tool:pytest]
minversion = 4.6
testpaths = "sbsearch"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --cov=sbsearch --cov-report=html
#addopts = --doctest-rst --doctest-plus
remote_data_strict = true
doctest_norecursedirs =
    */setup_package.py


[coverage:run]
omit =
    sbsearch/test/*
    sbsearch/version*
    sbsearch/setup_package.py


[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_